# agent-commander

./: .gitignore  GUIDE_RU.md  Install_Nanobot_GUI.bat  README.md  SETUP_NEW_DEVICE.md  app.py  app_gui.py  bootstrap_windows.bat  build_exe.bat  event_contract.py  launcher_preflight.py  orchestrator_store.py  pyproject.toml  requirements.txt  run_agent_commander.bat
agent_commander/: __init__.py  __main__.py
agent_commander/agent/: __init__.py  context.py  loop.py  memory.py  skills.py
agent_commander/bus/: __init__.py  queue.py
agent_commander/cli/: __init__.py  commands.py
agent_commander/config/: __init__.py  loader.py  schema.py
agent_commander/cron/: __init__.py  service.py
agent_commander/gui/: __init__.py  agent_selector.py  app.py  channel.py  chat_panel.py  events.py  extension_bar.py  extensions_panel.py  file_tray.py  input_bar.py  launcher.py  new_session_panel.py  notifications.py  plan_panel.py  project_dialog.py  project_panel.py  schedule_dialog.py  search_handler.py  session_list.py  session_manager.py  settings_dialog.py  sidebar.py  skill_bar.py  state_store.py  team_dialog.py  terminal_panel.py  theme.py
agent_commander/gui_qt/: __init__.py  app.py  channel.py  chat_panel.py  cycle_bar.py  extensions_panel.py  file_tray.py  input_bar.py  new_session_dialog.py  projects_panel.py  session_list.py  settings_panel.py  team_panel.py  theme.py
agent_commander/heartbeat/: __init__.py
agent_commander/providers/: __init__.py  agent_registry.py  agent_session.py  base.py  capabilities.py  email_tools.py  marker_parser.py  provider.py  proxy_api.py  proxy_server.py  tools.py
agent_commander/session/: __init__.py  extension_store.py  gui_store.py  manager.py  project_store.py  (+1 more)
cliproxyapi/: config.yaml
scripts/: bootstrap_windows.ps1  debug_pty.py  install_windows_easy.ps1  test_mock_proxy.py
workspace/: AGENTS.md  ARCHITECTURE_MAP.html  HEARTBEAT.md  SOUL.md  TOOLS.md  USER.md
(+31 files in other folders)
